# gurkbot

./: .dockerignore  .env-example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  coinflip.py  docker-compose.yaml  lint.yml  pyproject.toml  requirements.txt
.github/workflows/: lint-build-deploy.yml  lint.yml  linting.yml  main.yml  push_container.yml  status-embed.yaml
bot/: __init__.py  __main__.py  bot.py  command.py  constants.py  converters.py  group.py
bot/config/: config-list.yaml  default-config.yaml
bot/exts/backend/: auto_config.py  delete_button.py  error_handler.py  extension_manager.py
bot/exts/fun/: bonker.py  ciphers.py  coinflip.py  eightball.py  magic_8ball.py  off_topic.py  tic_tac_toe.py  wikipedia.py  wolfram.py  xkcd.py  yodabonk.json
bot/exts/github/: _issues.py  _profile.py  _source.py  github.py
bot/exts/gurkan/: gurkan_stats.py  gurkify.py  make_gurkan.py
bot/exts/gurkcraft/: gurkcraft.py
bot/exts/moderation/: logs.py  mod_utils.py
bot/exts/util/: reminder.py
bot/exts/utils/: _eval_helper.py  bot_stats.py  color.py  devops.py  eval.py  extensions.py  github.py  gurkan_stats.py  help.py  makegurkan.py  reminder.py  subscription.py  utils.py
bot/postgres/: __init__.py  utils.py
bot/postgres/models/: __init__.py  off_topic_name.py
bot/postgres/tables/: off_topic_names.sql  (+1 more)
bot/resources/: bot_replies.yml  yodabonk.json
bot/utils/: checks.py  embed_helper.py  environment.py  extension.py  extensions.py  is_gurkan.py  messages.py  pagination.py  parsers.py  time.py
(+3 files in other folders)
